removed empty sections

--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -1157,11 +1157,6 @@ import DisplayTable from "../../components/DisplayTable.astro"
         </CalloutCard>
     </CalloutContainer>
 </SubSubSubSection>
-
-<SubSubSection title="Kiiking" id = "kiiking">           
-    <RedText>This topic is in L13-Notes, slides 9-10. YouTube link:  <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/shorts/qvW0sz4kBLQ">https://www.youtube.com/shorts/qvW0sz4kBLQ</a></RedText>. 
-
-</SubSubSection>
-
+</Layout>
 
 <script src="/dyn/particle_kinetics/canvases.js" is:inline></script>
