--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -14,13 +14,13 @@ import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 import Example from "../../components/Example.astro"
 ---
-<Layout title="Frames and Machines">
+<Layout title="Frames and machines">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#assumptions'>Frames</a></li> 
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#two_force_member'>Machines</a></li>
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#zero_force_member'>Frame and Machine Analysis</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#zero_force_member'>Frame and machine analysis</a></li>
       </ul>
       </div>
 <Section title="Frames" id="frames">
@@ -47,7 +47,7 @@ Multi-force members in both frames and machines have the potential to have not o
 </p>
 </SubSection>
 
-<SubSection title="Frame and Machine Analysis" id="framemachineanalysis">
+<SubSection title="Frame and machine analysis" id="framemachineanalysis">
 
 <p>
 Because frames and machines carry not only axial loads but also shear loads and bending moments, we can't use the method of joints or the method of sections to get internal forces. 
