--- a/src/pages/sta/shear_moment_diagrams.astro
+++ b/src/pages/sta/shear_moment_diagrams.astro
@@ -16,17 +16,17 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 ---
 <!-- Suggestion for a real world example -->
-<Layout title="Shear Force & Bending Moment Diagrams">
+<Layout title="Shear force & bending moment diagrams">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#sign_conventions'>Sign Conventions</a></li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_procedure'>General Procedure</a></li>
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_rules'>General Rules</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#sign_conventions'>Sign conventions</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_procedure'>General procedure</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_rules'>General rules</a></li>
       </ul>
     </div>
 
-<Section title="Shear Force & Bending Moment Diagrams" id="shear_moment_diagrams">
+<Section title="Shear force & bending moment diagrams" id="shear_moment_diagrams">
 <p>
 Internal forces of a member can be determined by creating an imaginary cut in a member, and then solving for the internal shear force, normal force, and bending moment (which, after the cut, become "external" forces that can be solved for). 
 </p>
@@ -41,14 +41,14 @@ To determine how the internal shear force and bending moment change throughout t
 
 <!-- starts in lecture 19 -->
 
-<SubSection title="Sign Conventions" id="sign_conventions">
+<SubSection title="Sign conventions" id="sign_conventions">
 
 <Image src='/sta/shear_moment_diagrams/SignConventions.jpg' width='5'> Sign conventions for internal forces and moments</Image>
 
 </SubSection>
 
 
-<SubSection title="General Procedure" id="general_procedure">
+<SubSection title="General procedure" id="general_procedure">
 <p>
 Creating a shear force and bending moment diagram allows us to create a graphical representation of <InlineEquation equation='V' /> and <InlineEquation equation='M' /> as a function of the position along the beam, <InlineEquation equation='x' />. Therefore when creating internal loading diagrams we are trying to write equations for <InlineEquation equation='V(x)' /> and <InlineEquation equation='M(x)' />.
 </p>
@@ -79,7 +79,7 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 
 </SubSection>
 
-<SubSection title="General Rules" id="general_rules">
+<SubSection title="General rules" id="general_rules">
 
 <Enumerate>
 	<Item><strong>Concentrated external force or moment: </strong>  there will be a "jump" in the shear force or bending moment diagram.</Item>
