--- a/src/pages/sta/free_body_diagrams.astro
+++ b/src/pages/sta/free_body_diagrams.astro
@@ -12,17 +12,17 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import DisplayTable from "../../components/DisplayTable.astro"
 ---
-<Layout title="Free Body Diagrams">
+<Layout title="Free body diagrams">
 
   <div slot="navtree">
     <ul class='list-group list-group-flush py-0'> 
-      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#pulley_idealizations'>Pulley Idealizations</a></li> 
-      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#spring_idealizations'>Spring Idealizations</a></li>
-      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#smooth_surface_idealizations'>Smooth Surface Idealizations</a></li>
+      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#pulley_idealizations'>Pulley idealizations</a></li> 
+      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#spring_idealizations'>Spring idealizations</a></li>
+      <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#smooth_surface_idealizations'>Smooth surface idealizations</a></li>
   </ul>
   </div>
 
-<Section title="Free Body Diagrams" id="free_body_diagrams">
+<Section title="Free body diagrams" id="free_body_diagrams">
 
   <p>
      A free-body diagram (abbreviated as FBD, also called force diagram) is a diagram used to show the magnitude and direction of all applied forces, moments, and reaction and constraint forces acting on a body. They are important and necessary in solving complex problems in mechanics.
@@ -69,7 +69,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 </Section>
 
-<SubSection title="Pulley Idealizations" id="pulley_idealizations">
+<SubSection title="Pulley idealizations" id="pulley_idealizations">
 
 In this course we assume that a pulley is frictionless, meaning that the magnitude of the tensile force of the rope on either side of a pulley will be the same. 
 
@@ -79,7 +79,7 @@ In this course we assume that a pulley is frictionless, meaning that the magnitu
 
 </SubSection>
 
-<SubSection title="Spring Idealizations" id="spring_idealizations">
+<SubSection title="Spring idealizations" id="spring_idealizations">
 
 In this course, we assume springs are linearly elastic, which means that the force (tension) in the spring is linearly proportional to the extension of the spring (<InlineEquation equation='s' />) through the spring constant, <InlineEquation equation='k' />.
 
@@ -91,7 +91,7 @@ In this course, we assume springs are linearly elastic, which means that the for
 
 </SubSection>
 
-<SubSection title="Smooth Surface Idealizations" id="smooth_surface_idealizations">
+<SubSection title="Smooth surface idealizations" id="smooth_surface_idealizations">
 
 If a surface is described as "smooth", we assume that there is no frictional force on the surface. Therefore, any force applied by the surface is normal to the surface. 
 
