--- a/src/pages/sta/force_systems.astro
+++ b/src/pages/sta/force_systems.astro
@@ -19,7 +19,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rectangular_loading'>Rectangular loading</a></li>
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#triangular_loading'>Triangular loading</a></li>
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#nonuniform_distributed_loads'>Nonuniform distributed loads</a></li>
-        </ul>
+          </ul>
       </ul>
       </div>
 
@@ -120,22 +120,20 @@ Now we can solve for the center of mass of the distributed load, <InlineEquation
 
 <Image src='/sta/force_systems/NonuniformLoad.jpg' width='8'> Nonuniform load.</Image>
 
-<div style = "display: flex; justify-content: center; align-items: center;">
-  <div style = "display: flex; gap: 120px;">
-      <div style = "width: 300px; height: 200px; text-align: center;">
-        <p class = "text-center">Moment about 0 from force <InlineEquation equation = "dF:"/></p>
-        <DisplayEquation equation = `\\begin{align} dM &= x * (dF) \\\\
-        &= x * w * dx \\end{align}`/>
-        <p class = "text-center">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</p>
-        <DisplayEquation equation = "M_R = \\int dM = \\int_{0} ^ {L} x * w(x) \\, dx"/>
-      </div>
-      <div style = "width: 300px; height: 200px; text-align: center;">
-        <p class = "text-center">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</p>
-        <DisplayEquation equation = "M_R = \\bar{x} * F_R"/>
-        <p class = "text-center">solve for <InlineEquation equation = "\\bar{x}:"/></p>
-        <DisplayEquation equation = "\\bar{x} = \\frac{M_R}{F_R} = \\frac{\\int_{0} ^ {L} x * w \\, dx}{\\int_{0} ^ {L} w \\, dx}"/>
-      </div>
-    </div>
+<div class="row">
+  <div class="col-md-6 col-12">
+    <p class = "text-center">Moment about 0 from force <InlineEquation equation = "dF:"/></p>
+    <DisplayEquation equation = `\\begin{align} dM &= x * (dF) \\\\
+    &= x * w * dx \\end{align}`/>
+    <p class = "text-center">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</p>
+    <DisplayEquation equation = "M_R = \\int dM = \\int_{0} ^ {L} x * w(x) \\, dx"/>
+  </div>
+  <div class="col-md-6 col-12" >
+    <p class = "text-center">Total moment <InlineEquation equation = "(M_R)"/> about point 0:</p>
+    <DisplayEquation equation = "M_R = \\bar{x} * F_R"/>
+    <p class = "text-center">solve for <InlineEquation equation = "\\bar{x}:"/></p>
+    <DisplayEquation equation = "\\bar{x} = \\frac{M_R}{F_R} = \\frac{\\int_{0} ^ {L} x * w \\, dx}{\\int_{0} ^ {L} w \\, dx}"/>
+  </div>
 </div>
 
 </SubSubSection>
