call out card adjustment
rearranged the text to better fit the template and put title into sentencing tense

--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -43,13 +43,14 @@ A roller support only constrains movement in the y-direction, and thus only has 
 <!-- L13, Slide 3 had some good examples of support reactions if we want to make a pop up on the side eventually.-->
 
 <CalloutContainer slot = "cards">
-	<CalloutCard title = "Application Alert!">
+	<CalloutCard title = "Application alert!">
 		<p>
-			Have you ever wondered what a connection being used in the real world would look like? Here is a cool example of <strong>roller supports</strong> being used in the <strong>Krannert Center parking garage.</strong>
+			The Krannert Center parking garage uses <strong>Types of connections</strong> by using roller supports.
 		</p>
 		<Image src = '/sta/reaction_forces/KrannertCenterRollerSupports.jpg' width = '8'/>
 		<p>
-			Here, roller supports are incorporated below columns supporting the roof of the Krannert Center parking garage. You can learn more about the Krannert Center for the Performing Arts <a target = "_blank" rel = "noopener noreferrer" href = "https://krannertcenter.com/events/krannert-center-tours">here.</a>
+			Here, roller supports are incorporated below columns supporting the roof of the Krannert Center parking garage.
+			You can learn more about the Krannert Center for the Performing Arts <a target = "_blank" rel = "noopener noreferrer" href = "https://krannertcenter.com/events/krannert-center-tours">here.</a>
 		</p>
 	</CalloutCard>
 </CalloutContainer>
